# BACKEND-BLOCK-ID

./: .env.example  .gitignore  Anchor.toml  DOCKER_README.md  Dockerfile  README.md  batch_publish.py  batch_read_debug.py  blockid_oracle.json  check_db.py  check_key.py  dataset.csv  docker-compose.yml  fix_confidence_schema.py  locustfile.py  main.py  production.env.example  publish_one_wallet.py  push-to-github.ps1  pyproject.toml  read_trust_score.py  read_trust_score_auto.py  requirements.txt  run_blockid_pipeline.ps1  schema.sql  schema_postgres.sql  structure.txt  test_env.py  test_insert_wallet.py  test_wallet_prediction.py  test_wallets.py  train_wallet_classifier.py  tree_output.txt  wallet_labels.csv  wallet_labels_auto.csv  wallet_labels_master.csv  wallet_tracking.db-journal  wallets.csv  wallets.txt
.github/workflows/: README.md  blockid_canary.yml  blockid_ci_cd.yml
backend_blockid/: __init__.py
backend_blockid/agent_worker/: __init__.py  health.py  priority_scheduler.py  runner.py  runtime.py  tasks.py  worker.py
backend_blockid/ai_engine/: __init__.py  badge_rules.py  dynamic_risk_engine.py  dynamic_risk_v2.py  (+8 more)
docs/: api_reference.md  architecture.md  architecture_gaps.md  b2b_api_pricing.md  blockid_spec - Copy.md  blockid_whitepaper.md  blockid_whitepaper_short.md  db_schema.md  devnet_mode.md  exchange_integration_api_spec.md  investor_summary_one_page.md  openapi.json  pitch_deck_outline.md  python_sdk_example.py  ui_api_spec.md  unused_endpoints.md  wallet_tracking_migration.md
frontend_blockid/: example_graph.html
k8s/: README.md  backend-deployment.yaml  backend-deployments.yaml  configmap.yaml  ingress.yaml  namespace.yaml  pipeline-cronjob.yaml  pvc.yaml  secret.yaml.example  service-canary.yaml  service.yaml
models/: model.pkl  wallet_classifier.pkl
monitoring/: CANARY_DASHBOARD.md  README.md  ROLLBACK_ALERT.md  prometheus-docker.yml  prometheus.yml
phantom-plugin/: README.md  background.js  config.js  content.js  warning-modal.css
programs/blockid_oracle/: Cargo.toml  SPEC.md
programs/blockid_oracle/src/: lib.rs
scripts/: README_SCHEDULER.md  create_nightly_task.ps1  deploy_mainnet_wsl.sh
solana_trust_oracle/: README.md  lib.rs
testing/: __init__.py  stress_test.py
tests/: __init__.py  conftest.py  test_analytics.py  test_feature_builder_scaling.py  test_logging_import.py  test_metrics_pipeline.py  test_ml_trust_model.py  test_rugpull_detector.py  test_scam_detector.py  test_trust_score_pda.py  test_wallet_classifier.py  test_wallet_graph.py  test_wallet_scanner_realistic.py  test_wallet_tracking.py
(+330 files in other folders)
