[package]
name = "blockid_oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]


[features]
default = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
